[Add] define rule to label

--- a/metadata_view.ipynb
+++ b/metadata_view.ipynb
@@ -5,20 +5,35 @@
    "metadata": {},
    "source": [
     "# Metadata view를 통한 결론\n",
+    "\n",
     "* 탐색한 파일\n",
+    "\n",
     "    * <code>ptbxl_database.csv</code>\n",
+    "\n",
     "    * <code>scp_statements.csv</code>\n",
     "* * *\n",
-    "* <code>ptbxl_database.csv</code>의 <code>scp_codes</code>의 문자열(딕셔너리)을 <code>json.loads()</code>를 통해 가져올 것"
+    "# How to get Label\n",
+    "1. <code>ptbxl_database.csv</code>의 <code>scp_codes</code>의 문자열(딕셔너리)을 <code>json.loads()</code>를 통해 가져올 것\n",
+    "\n",
+    "    * 이때, Decode할 때 문법적으로 고쳐야하는 거 있으니 아래 참고!\n",
+    "\n",
+    "2. 이제 이 likelihood를 어떻게 활용해서 labeling으로 만들 것인가..\n",
+    "\n",
+    "    * likelihood가 100이고, 나머지 key 값에 대해서는 0인 순수한 sample에 대해서 label로 매길 것\n",
+    "    \n",
+    "    * 그럼 애매한 데이터는 안 넣은 것이냐? 안 넣은 것이라면, 그 이유는?\n",
+    "\n",
+    "        * 애매한 데이터는 말 그대로 특정 label로 labeling이 애매하기 때문이다.."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import json"
    ]
   },
@@ -42,142 +57,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ecg_id</th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>nurse</th>\n",
+       "      <th>site</th>\n",
+       "      <th>device</th>\n",
+       "      <th>recording_date</th>\n",
+       "      <th>...</th>\n",
+       "      <th>validated_by_human</th>\n",
+       "      <th>baseline_drift</th>\n",
+       "      <th>static_noise</th>\n",
+       "      <th>burst_noise</th>\n",
+       "      <th>electrodes_problems</th>\n",
+       "      <th>extra_beats</th>\n",
+       "      <th>pacemaker</th>\n",
+       "      <th>strat_fold</th>\n",
+       "      <th>filename_lr</th>\n",
+       "      <th>filename_hr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>15709.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>CS-12   E</td>\n",
+       "      <td>1984-11-09 09:17:34</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>, I-V1,</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>records100/00000/00001_lr</td>\n",
+       "      <td>records500/00000/00001_hr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>13243.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>CS-12   E</td>\n",
+       "      <td>1984-11-14 12:55:37</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>records100/00000/00002_lr</td>\n",
+       "      <td>records500/00000/00002_hr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>20372.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>CS-12   E</td>\n",
+       "      <td>1984-11-15 12:49:10</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>records100/00000/00003_lr</td>\n",
+       "      <td>records500/00000/00003_hr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>17014.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>CS-12   E</td>\n",
+       "      <td>1984-11-15 13:44:57</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>, II,III,AVF</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>records100/00000/00004_lr</td>\n",
+       "      <td>records500/00000/00004_hr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>17448.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>CS-12   E</td>\n",
+       "      <td>1984-11-17 10:43:15</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>, III,AVR,AVF</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "      <td>records100/00000/00005_lr</td>\n",
+       "      <td>records500/00000/00005_hr</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 28 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['ecg_id', 'patient_id', 'age', 'sex', 'height', 'weight', 'nurse',\n",
-       "       'site', 'device', 'recording_date', 'report', 'scp_codes', 'heart_axis',\n",
-       "       'infarction_stadium1', 'infarction_stadium2', 'validated_by',\n",
-       "       'second_opinion', 'initial_autogenerated_report', 'validated_by_human',\n",
-       "       'baseline_drift', 'static_noise', 'burst_noise', 'electrodes_problems',\n",
-       "       'extra_beats', 'pacemaker', 'strat_fold', 'filename_lr', 'filename_hr'],\n",
-       "      dtype='object')"
+       "   ecg_id  patient_id   age  sex  height  weight  nurse  site     device  \\\n",
+       "0       1     15709.0  56.0    1     NaN    63.0    2.0   0.0  CS-12   E   \n",
+       "1       2     13243.0  19.0    0     NaN    70.0    2.0   0.0  CS-12   E   \n",
+       "2       3     20372.0  37.0    1     NaN    69.0    2.0   0.0  CS-12   E   \n",
+       "3       4     17014.0  24.0    0     NaN    82.0    2.0   0.0  CS-12   E   \n",
+       "4       5     17448.0  19.0    1     NaN    70.0    2.0   0.0  CS-12   E   \n",
+       "\n",
+       "        recording_date  ... validated_by_human  baseline_drift static_noise  \\\n",
+       "0  1984-11-09 09:17:34  ...               True             NaN    , I-V1,     \n",
+       "1  1984-11-14 12:55:37  ...               True             NaN          NaN   \n",
+       "2  1984-11-15 12:49:10  ...               True             NaN          NaN   \n",
+       "3  1984-11-15 13:44:57  ...               True    , II,III,AVF          NaN   \n",
+       "4  1984-11-17 10:43:15  ...               True   , III,AVR,AVF          NaN   \n",
+       "\n",
+       "  burst_noise electrodes_problems  extra_beats  pacemaker  strat_fold  \\\n",
+       "0         NaN                 NaN          NaN        NaN           3   \n",
+       "1         NaN                 NaN          NaN        NaN           2   \n",
+       "2         NaN                 NaN          NaN        NaN           5   \n",
+       "3         NaN                 NaN          NaN        NaN           3   \n",
+       "4         NaN                 NaN          NaN        NaN           4   \n",
+       "\n",
+       "                 filename_lr                filename_hr  \n",
+       "0  records100/00000/00001_lr  records500/00000/00001_hr  \n",
+       "1  records100/00000/00002_lr  records500/00000/00002_hr  \n",
+       "2  records100/00000/00003_lr  records500/00000/00003_hr  \n",
+       "3  records100/00000/00004_lr  records500/00000/00004_hr  \n",
+       "4  records100/00000/00005_lr  records500/00000/00005_hr  \n",
+       "\n",
+       "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ptbxl_db.columns"
+    "ptbxl_db.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0', 'description', 'diagnostic', 'form', 'rhythm',\n",
-       "       'diagnostic_class', 'diagnostic_subclass', 'Statement Category',\n",
-       "       'SCP-ECG Statement Description', 'AHA code', 'aECG REFID', 'CDISC Code',\n",
-       "       'DICOM Code'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "scp.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'NORM': 100.0, 'LVOLT': 0.0, 'SR': 0.0}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(ptbxl_db['scp_codes'][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"NORM\": 100.0, \"LVOLT\": 0.0, \"SR\": 0.0}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(ptbxl_db['scp_codes'][0].replace(\"\\'\", \"\\\"\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 중요! : 이렇게 바꿔야 json 모듈에서 decode한다.\n",
-    "\n",
-    "a = json.loads(ptbxl_db['scp_codes'][0].replace(\"\\'\", \"\\\"\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NORM: 100.0\n",
-      "LVOLT: 0.0\n",
-      "SR: 0.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for k, v in a.items():\n",
-    "    print(f\"{k}: {v}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -338,13 +434,192 @@
        "4    F-000B7  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "scp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ecg_id', 'patient_id', 'age', 'sex', 'height', 'weight', 'nurse',\n",
+       "       'site', 'device', 'recording_date', 'report', 'scp_codes', 'heart_axis',\n",
+       "       'infarction_stadium1', 'infarction_stadium2', 'validated_by',\n",
+       "       'second_opinion', 'initial_autogenerated_report', 'validated_by_human',\n",
+       "       'baseline_drift', 'static_noise', 'burst_noise', 'electrodes_problems',\n",
+       "       'extra_beats', 'pacemaker', 'strat_fold', 'filename_lr', 'filename_hr'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ptbxl_db.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'description', 'diagnostic', 'form', 'rhythm',\n",
+       "       'diagnostic_class', 'diagnostic_subclass', 'Statement Category',\n",
+       "       'SCP-ECG Statement Description', 'AHA code', 'aECG REFID', 'CDISC Code',\n",
+       "       'DICOM Code'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scp.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'NORM': 100.0, 'LVOLT': 0.0, 'SR': 0.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ptbxl_db['scp_codes'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"NORM\": 100.0, \"LVOLT\": 0.0, \"SR\": 0.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ptbxl_db['scp_codes'][0].replace(\"\\'\", \"\\\"\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21799"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ptbxl_db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Total Normal Data]: 7017\n",
+      "NDT: 1182\n",
+      "NST_: 374\n",
+      "DIG: 12\n",
+      "LNGQT: 40\n",
+      "[Total Abnormal Data]: 1608\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 중요! : 이렇게 바꿔야 json 모듈에서 decode한다.\n",
+    "\n",
+    "cnt_dict = {\n",
+    "    'NORM': 0,\n",
+    "    'NDT': 0,\n",
+    "    'NST_': 0,\n",
+    "    'DIG': 0,\n",
+    "    'LNGQT': 0\n",
+    "}\n",
+    "\n",
+    "def check_normal(a):\n",
+    "    # 완전히 순수한 정상 데이터\n",
+    "    ret = False\n",
+    "    for k, v in a.items():\n",
+    "        if (k == 'NORM' and v == 100):\n",
+    "            ret = True\n",
+    "        elif (k != 'NORM' and v == 0): \n",
+    "            continue\n",
+    "        else: \n",
+    "            return False\n",
+    "    return ret\n",
+    "\n",
+    "def check_abnormal(a, label: str):\n",
+    "    # label에 대한 Abnormality는 100이지만, 다른 것에 대한 likelihood는 100만 아니면 된다.\n",
+    "    ret = False\n",
+    "    for k, v in a.items():\n",
+    "        if (k == label and v == 100):\n",
+    "            ret = True\n",
+    "        elif (k != label and v == 0): \n",
+    "            continue\n",
+    "        else: \n",
+    "            return False\n",
+    "    return ret\n",
+    "\n",
+    "for i in range(len(ptbxl_db)):\n",
+    "    a = json.loads(ptbxl_db['scp_codes'][i].replace(\"\\'\", \"\\\"\"))\n",
+    "    \n",
+    "    if check_normal(a):\n",
+    "        cnt_dict['NORM'] += 1\n",
+    "        \n",
+    "    for label in ['NDT', 'NST_', 'DIG', 'LNGQT']:\n",
+    "        if check_abnormal(a, label):\n",
+    "            cnt_dict[label] += 1\n",
+    "    \n",
+    "abnormal_sum = 0\n",
+    "\n",
+    "print(f\"[Total Normal Data]: {cnt_dict['NORM']}\")\n",
+    "\n",
+    "for k, v in cnt_dict.items():\n",
+    "    if k == 'NORM':\n",
+    "        continue\n",
+    "    print(f\"{k}: {v}\")\n",
+    "    abnormal_sum += v\n",
+    "print(f\"[Total Abnormal Data]: {abnormal_sum}\")"
    ]
   }
  ],
